--- a/style.css
+++ b/style.css
@@ -441,3 +441,41 @@ footer div ul {
     width: fit-content;
     margin: auto;
 }
+
+
+.inputModel {
+    border-radius: 4px;
+    border: 1px solid #d8d8d8;
+    padding: 7px;
+}
+
+
+@media screen and (max-width: 600px) {
+    .owl-dots {
+        display: none;
+    }
+
+    .owl-nav {
+        display: none;
+    }
+
+    .modal-xl {
+        width: 80% !important;
+    }
+}
+
+form {
+    background-color: white;
+    padding: 50px;
+}
+
+#pages h2 {
+    color: #005DA8;
+    font-weight: 700;
+}
+
+#pages label,
+#pages span,
+#pages p {
+    font-weight: 600;
+}
